OPIOID-152 Fix container spacing bug

--- a/static/scss/base/page.scss
+++ b/static/scss/base/page.scss
@@ -4,5 +4,4 @@ body {
 
 .container {
     background-color: #FFFFFF;
-    padding-bottom: 1em;
 }
